First step timelines

--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -3,3 +3,13 @@
 <%= render 'form', art: @art %>
 
 <%= link_to 'Back', arts_path %>
+
+<!--<script type="text/javascript">
+    function verification_password() {
+        if(prompt("Entrez le mot de passe : ") != "RubyPassword!") {
+            document.location = ".";
+        }
+    }
+
+    window.onload = verification_password();
+</script>-->
