Police rework timelines

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,4 @@
  */
 
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Allura|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Allura|Roboto:400,500&display=swap');
