--- a/app/assets/stylesheets/timelines.scss
+++ b/app/assets/stylesheets/timelines.scss
@@ -130,19 +130,19 @@ header {
 a {
 	background: $primary !important;
 	color: $text !important;
-	padding: 8px 20px;
+	padding: 8px 20px !important;
 	text-transform: uppercase;
 	font-size: 14px;
-	margin-bottom: 20px;
-	margin-top: 10px;
+	margin-bottom: 20px !important;
+	margin-top: 10px !important;
 	display: inline-block;
 	border-radius: 2px;
-	box-shadow: 0 1px 3px -1px rgba(0, 0, 0, .6);
+	box-shadow: 0 1px 3px -1px rgba(0, 0, 0, .6) !important;
 
 	&:hover, &:active, &:focus {
-		background: darken($primary, 10%);
-		color: $text;
-		text-decoration: none;
+		background: darken($primary, 10%) !important;
+		color: $text !important;
+		text-decoration: none !important;
 	}
 
 }
