--- a/app/views/timelines/new.html.erb
+++ b/app/views/timelines/new.html.erb
@@ -3,3 +3,13 @@
 <%= render 'form', timeline: @timeline %>
 
 <%= link_to 'Back', timelines_path %>
+
+<script type="text/javascript">
+    function verification_password() {
+        if(prompt("Entrez le mot de passe : ") != "RubyPassword!") {
+            document.location = ".";
+        }
+    }
+
+    window.onload = verification_password();
+</script>
