--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -17,6 +17,7 @@
 
           <div class="timeline-content timeline-card js--fadeInLeft">
             <div class="timeline-img-header" style="background: url('<%= timeline.icon %>') center center no-repeat; background-size: cover;">
+              <div class="opacity_shadow"></div>
               <h2><%= timeline.title %></h2>
             </div>
             <div class="date"><%= timeline.dates %></div>
@@ -34,6 +35,7 @@
 
           <div class="timeline-content timeline-card js--fadeInRight">
             <div class="timeline-img-header" style="background: url('<%= timeline.icon %>') center center no-repeat; background-size: cover;">
+              <div class="opacity_shadow"></div>
               <h2><%= timeline.title %></h2>
             </div>
             <div class="date"><%= timeline.dates %></div>
