--- a/app/assets/stylesheets/timelines.scss
+++ b/app/assets/stylesheets/timelines.scss
@@ -166,6 +166,14 @@ a {
 		}
 }
 
+.opacity_shadow {
+	background: #000;
+	opacity: 0.3;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+}
+
 .timeline-content {
 	transition: box-shadow 0.4s ease;
 }
