--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -4,12 +4,12 @@
 
 <%= link_to 'Back', arts_path %>
 
-<!--<script type="text/javascript">
+<script type="text/javascript">
     function verification_password() {
-        if(prompt("Entrez le mot de passe : ") != "RubyPassword!") {
+        if(prompt("Entrez le mot de passe : ") != "<%= @art.password %>") {
             document.location = ".";
         }
     }
 
     window.onload = verification_password();
-</script>-->
+</script>
