--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -25,5 +25,10 @@
   <%= @art.date %>
 </p>
 
+<p>
+  <strong>Timeline:</strong>
+  <%= @art.timeline.inspect %>
+</p>
+
 <%= link_to 'Edit', edit_art_path(@art) %> |
 <%= link_to 'Back', arts_path %>
