--- a/app/views/timelines/new.html.erb
+++ b/app/views/timelines/new.html.erb
@@ -6,7 +6,7 @@
 
 <script type="text/javascript">
     function verification_password() {
-        if(prompt("Entrez le mot de passe : ") != "RubyPassword!") {
+        if(prompt("Entrez le mot de passe : ") != "<%= @timeline.password %>") {
             document.location = ".";
         }
     }
