--- a/app/views/arts/_form.html.erb
+++ b/app/views/arts/_form.html.erb
@@ -1,4 +1,16 @@
-<%= form_with(model: art, local: true) do |form| %>
+<%= simple_form_for @art do |f| %>
+  <%= f.input :title %>
+  <%= f.input :author %>
+  <%= f.input :description %>
+  <%= f.input :image %>
+  <%= f.input :date %>
+  <%= f.association :timeline %>
+  <%= f.button :submit %>
+<% end %>
+
+
+
+<!-- <%= form_with(model: art, local: true) do |form| %>
   <% if art.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(art.errors.count, "error") %> prohibited this art from being saved:</h2>
@@ -40,3 +52,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+-->
