--- a/app/views/timelines/_form.html.erb
+++ b/app/views/timelines/_form.html.erb
@@ -1,3 +1,14 @@
+<%= simple_form_for @timeline do |f| %>
+  <%= f.input :title %>
+  <%= f.input :description %>
+  <%= f.input :icon %>
+  <%= f.input :link %>
+  <%= f.input :dates %>
+  <%= f.button :submit %>
+<% end %>
+
+
+<!--
 <%= form_with(model: timeline, local: true) do |form| %>
   <% if timeline.errors.any? %>
     <div id="error_explanation">
@@ -40,3 +51,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+-->
