--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -31,35 +31,46 @@
 
 <% if @timeline.title == "Les coups de cœurs"%>
 
+<!-- Page Content -->
+<section class="py-5">
+  <div class="container">
+    <h1 class="display-4"><%= @timeline.title %></h1>
+    <p class="lead"><%= @timeline.description %></p>
+    <a href="./"><button type="button" class="btn btn-primary">Revenir à l'accueil</button></a>
+  </div>
+</section>
+
 <header>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <% @timeline.arts.sort.each_with_index do |art, index| %>
+          <% if index == 0 %>
+            <li data-target="#carouselExampleIndicators" data-slide-to="<%= index %>" class="active"></li>
+          <% else %>
+            <li data-target="#carouselExampleIndicators" data-slide-to="<%= index %>"></li>
+          <% end %>
+        <% end %>
     </ol>
     <div class="carousel-inner" role="listbox">
-      <!-- Slide One - Set the background image for this slide in the line below -->
-      <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="display-4">First Slide</h2>
-          <p class="lead">This is a description for the first slide.</p>
-        </div>
-      </div>
-      <!-- Slide Two - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/bF2vsubyHcQ/1920x1080')">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="display-4">Second Slide</h2>
-          <p class="lead">This is a description for the second slide.</p>
-        </div>
-      </div>
-      <!-- Slide Three - Set the background image for this slide in the line below -->
-      <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
-        <div class="carousel-caption d-none d-md-block">
-          <h2 class="display-4">Third Slide</h2>
-          <p class="lead">This is a description for the third slide.</p>
-        </div>
-      </div>
+      <% @timeline.arts.sort.each_with_index do |art, index| %>
+        <% if index == 0 %>
+          <div class="carousel-item active" style="background-image: url('<%= art.image %>');">
+            <div class="opacity_shadow_slideshow"></div>
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-4"><%= art.title %></h2>
+              <p class="lead"><%= art.description %></p>
+            </div>
+          </div>
+        <% else %>
+          <div class="carousel-item" style="background-image: url('<%= art.image %>');">
+            <div class="opacity_shadow_slideshow"></div>
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-4"><%= art.title %></h2>
+              <p class="lead"><%= art.description %></p>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -74,7 +85,7 @@
 
 <% else %>
 
-  <% @timeline.arts.each do |art| %>
+  <% @timeline.arts.sort.each do |art| %>
     <%= art.title %>
     <br/>
   <% end %>
