--- a/app/assets/stylesheets/timelines.scss
+++ b/app/assets/stylesheets/timelines.scss
@@ -22,7 +22,7 @@ $accent: #FF4081;
 }
 
 #index_style h1 {
-  font-size: 200%;
+  font-size: 300%;
   text-transform: uppercase;
   letter-spacing: 3px;
   font-weight: 400;
@@ -284,4 +284,23 @@ $accent: #FF4081;
 
 a {
 	font-family: 'Roboto' !important;
+}
+
+button {
+	background: $primary !important;
+	color: $text !important;
+	padding: 8px 20px !important;
+	text-transform: uppercase !important;
+	font-size: 14px;
+	margin-bottom: 20px !important;
+	margin-top: 10px !important;
+	display: inline-block;
+	border-radius: 2px;
+	box-shadow: 0 1px 3px -1px rgba(0, 0, 0, .6) !important;
+}
+
+button:hover {
+	background: darken($primary, 10%) !important;
+	color: $text !important;
+	text-decoration: none !important;
 }
