--- a/app/assets/stylesheets/arts.scss
+++ b/app/assets/stylesheets/arts.scss
@@ -2,12 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-img {
+.art_all img {
 	max-width: 150px;
 	max-height: 150px;
 }
 
-td {
+.art_all td {
 	min-width: 100px;
 	max-width: 300px;
 }
