--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -36,10 +36,10 @@
 
 <%= link_to 'New Art', new_art_path %>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
     function redirect() {
         document.location = ".";
     }
 
     window.onload = redirect();
-</script> -->
+</script>
